Modified GameSetupView